--- a/index.html
+++ b/index.html
@@ -248,11 +248,11 @@
               </div>
             </div>
 
-            <!-- Celtix / Rhea -->
+            <!-- celtix / Rhea -->
             <div class="member-item">
               <p class="member-img"><img src="image/member/rhea.png" alt="Rhea"></p>
               <div class="member-body">
-                <a href="https://twitter.com/_Rhea666" target="_blank" rel="noopener"><h3 class="member-name">Celtix / Rhea</h3></a>
+                <a href="https://twitter.com/_Rhea666" target="_blank" rel="noopener"><h3 class="member-name">celtix / Rhea</h3></a>
               </div>
             </div>
 
