--- a/index.html
+++ b/index.html
@@ -108,6 +108,42 @@
           <h2 class="title"><span class="under-colored">Release</span></h2>
           <div class="release-list">
 
+            <!-- Meram1n - Photon Ray -->
+            <a class="release-item" href="https://soundcloud.com/user-528662448/photon-ray" target="_blank" rel="noopener noreferrer">
+              <p class="release-img"><img src="image/jacket/photon-ray.png" alt="Meram1n - Photon Ray" /></p>
+              <div class="release-detail">
+                <p class="artist-img"><img src="image/artist/meram1n.jpg" alt="Meram1n" /></p>
+                <div>
+                  <p class="release-name">Meram1n - Photon Ray</p>
+                  <p class="release-info">Personal Release</p>
+                </div>
+              </div>
+            </a>
+
+            <!-- Polariiz & Ulagumo - Claymore -->
+            <a class="release-item" href="https://soundcloud.com/polariiz/polariiz-ulagumo-claymore" target="_blank" rel="noopener noreferrer">
+              <p class="release-img"><img src="image/jacket/claymore.png" alt="Polariiz & Ulagumo - Claymore" /></p>
+              <div class="release-detail">
+                <p class="artist-img"><img src="image/artist/n3xt.png" alt="Polariiz & Ulagumo" /></p>
+                <div>
+                  <p class="release-name">Polariiz & Ulagumo - Claymore</p>
+                  <p class="release-info">Collaboration Release</p>
+                </div>
+              </div>
+            </a>
+
+            <!-- Meram1n - Memory -->
+            <a class="release-item" href="https://soundcloud.com/user-528662448/memory-master" target="_blank" rel="noopener noreferrer">
+              <p class="release-img"><img src="image/jacket/memory.jpg" alt="Meram1n - Memory" /></p>
+              <div class="release-detail">
+                <p class="artist-img"><img src="image/artist/meram1n.jpg" alt="Meram1n" /></p>
+                <div>
+                  <p class="release-name">Meram1n - Memory</p>
+                  <p class="release-info">Personal Release</p>
+                </div>
+              </div>
+            </a>
+
             <!-- ChabiTist - No Matter -->
             <a class="release-item" href="https://soundcloud.com/user-528662448/chabitist-no-matter" target="_blank" rel="noopener noreferrer">
               <p class="release-img"><img src="image/jacket/no-matter.jpg" alt="ChabiTist - No Matter" /></p>
