--- a/index.html
+++ b/index.html
@@ -108,6 +108,18 @@
           <h2 class="title"><span class="under-colored">Release</span></h2>
           <div class="release-list">
 
+            <!-- (2nd Album) Techcore Horizon -->
+            <a class="release-item" href="https://soundcloud.com/user-528662448/xfd-remaster" target="_blank" rel="noopener noreferrer">
+              <p class="release-img"><img src="image/jacket/techcore-horizon-01.jpg" alt="Techcore Horizon" /></p>
+              <div class="release-detail">
+                <p class="artist-img"><img src="image/artist/n3xt.png" alt="N3XT Future Records" /></p>
+                <div>
+                  <p class="release-name">Techcore Horizon</p>
+                  <p class="release-info">2nd Album</p>
+                </div>
+              </div>
+            </a>
+
             <!-- Meram1n - Photon Ray -->
             <a class="release-item" href="https://soundcloud.com/user-528662448/photon-ray" target="_blank" rel="noopener noreferrer">
               <p class="release-img"><img src="image/jacket/photon-ray.png" alt="Meram1n - Photon Ray" /></p>
