--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
           <div class="release-list">
 
             <!-- (2nd Album) Techcore Horizon -->
-            <a class="release-item" href="https://soundcloud.com/user-528662448/xfd-remaster" target="_blank" rel="noopener noreferrer">
+            <a class="release-item" href="https://linkco.re/r7RDZ89F" target="_blank" rel="noopener noreferrer">
               <p class="release-img"><img src="image/jacket/techcore-horizon-01.jpg" alt="Techcore Horizon" /></p>
               <div class="release-detail">
                 <p class="artist-img"><img src="image/artist/n3xt.png" alt="N3XT Future Records" /></p>
