--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
   <meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=no">
   <meta property='og:type' content='website'>
   <meta property='og:title' content='N3XT Future Records'>
-  <meta property='og:url' content='URLが入る'>
   <meta property='og:description' content='N3XT Future Records'>
   <meta property="og:image" content="image/ogp.png">
   <meta name="description" content="N3XT Future Records" />
@@ -16,7 +15,6 @@
   <link href="css/ress.css" media="all" rel="stylesheet" type="text/css" />
   <link href="css/style.css" media="all" rel="stylesheet" type="text/css" />
   <link rel="shortcut icon" href="image/favicon.ico" />
-  <link rel=”canonical” href=”URLが入る” />
 </head>
 
 <body>
@@ -325,6 +323,14 @@
               <p class="member-img"><img src="image/member/xyris.jpg" alt="Xyris"></p>
               <div class="member-body">
                 <a href="https://twitter.com/_Xyris_" target="_blank" rel="noopener"><h3 class="member-name">Xyris</h3></a>
+              </div>
+            </div>
+
+            <!-- Riboras -->
+            <div class="member-item">
+              <p class="member-img"><img src="image/member/riboras.jpg" alt="Xyris"></p>
+              <div class="member-body">
+                <a href="https://twitter.com/Riborasss" target="_blank" rel="noopener"><h3 class="member-name">Riboras</h3></a>
               </div>
             </div>
 
