--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
             <a class="release-item" href="https://soundcloud.com/user-528662448/aquaaura" target="_blank" rel="noopener noreferrer">
               <p class="release-img"><img src="image/jacket/aquaaura.jpg" alt="Rhea - Aquaaura" /></p>
               <div class="release-detail">
-                <p class="artist-img"><img src="image/member/rhea.png" alt="Rhea"></p>
+                <p class="artist-img"><img src="image/member/celtix.png" alt="Rhea"></p>
                 <div>
                   <p class="release-name">Rhea - Aquaaura</p>
                   <p class="release-info">Personal Release</p>
@@ -296,7 +296,7 @@
 
             <!-- celtix / Rhea -->
             <div class="member-item">
-              <p class="member-img"><img src="image/member/rhea.png" alt="Rhea"></p>
+              <p class="member-img"><img src="image/member/celtix.png" alt="Rhea"></p>
               <div class="member-body">
                 <a href="https://twitter.com/_Rhea666" target="_blank" rel="noopener"><h3 class="member-name">celtix / Rhea</h3></a>
               </div>
