--- a/index.html
+++ b/index.html
@@ -106,6 +106,18 @@
           <h2 class="title"><span class="under-colored">Release</span></h2>
           <div class="release-list">
 
+            <!-- (3rd Album) Techcore Horizon 02 -->
+            <a class="release-item" href="https://n3xtfuturerecords.bandcamp.com/album/techcore-horizon-02" target="_blank" rel="noopener noreferrer">
+              <p class="release-img"><img src="image/jacket/techcore-horizon-02.png" alt="" /></p>
+              <div class="release-detail">
+                <p class="artist-img"><img src="image/artist/n3xt.png" alt="" /></p>
+                <div>
+                  <p class="release-name">Techcore Horizon 02</p>
+                  <p class="release-info">3rd Album</p>
+                </div>
+              </div>
+            </a>
+
             <!-- (2nd Album) Techcore Horizon -->
             <a class="release-item" href="https://linkco.re/r7RDZ89F" target="_blank" rel="noopener noreferrer">
               <p class="release-img"><img src="image/jacket/techcore-horizon-01.jpg" alt="Techcore Horizon" /></p>
