--- a/index.html
+++ b/index.html
@@ -106,6 +106,18 @@
           <h2 class="title"><span class="under-colored">Release</span></h2>
           <div class="release-list">
 
+            <!-- (4th Album) Alternative UK Hardcore -->
+            <a class="release-item" href="https://www.youtube.com/watch?v=P17ckfz4eW4" target="_blank" rel="noopener noreferrer">
+              <p class="release-img"><img src="image/jacket/alternative-uk-hardcore.png" alt="" /></p>
+              <div class="release-detail">
+                <p class="artist-img"><img src="image/artist/n3xt.png" alt="" /></p>
+                <div>
+                  <p class="release-name">Alternative UK Hardcore</p>
+                  <p class="release-info">4th Album</p>
+                </div>
+              </div>
+            </a>
+            
             <!-- (3rd Album) Techcore Horizon 02 -->
             <a class="release-item" href="https://n3xtfuturerecords.bandcamp.com/album/techcore-horizon-02" target="_blank" rel="noopener noreferrer">
               <p class="release-img"><img src="image/jacket/techcore-horizon-02.png" alt="" /></p>
